# ams

./: CMakeLists.txt  LICENSE  README.md  package.xml
ams/: CMakeLists.txt  README.md  package.xml
ams/include/ams/: ams_common.h
ams/launch/: ams_quad_3dr_x4_apm_startup.launch  ams_quad_mocap_tune.launch  ams_quad_scorpion_+4_apm_startup.launch
ams/rviz/: ams_rviz.rviz
ams/src/: ams_common.cpp  ams_trajectory_planner.cpp
ams/urdf/: 3dr_x4_apm.urdf
ams/viz/: mocap.yaml
ams_lwms/: CMakeLists.txt  package.xml
ams_lwms/include/ams_lwms/: lwms_trajectory.h
ams_lwms/launch/: ams_quad_3dr_x4_apm_startup.launch  apm2_blacklist.yaml  arm.launch
ams_lwms/msg/: ManAct.msg
ams_lwms/other/: ik.py  pincher.wxm  pincher2.wxm
ams_lwms/scripts/: al5d_ik_server.py  al5d_manipulation.py
ams_lwms/src/: lwms_trajectory.cpp  lwms_trajectory_node.cpp  test_node.cpp
ams_lwms/srv/: Manipulation.srv
ams_lwms/viz/: mocap.yaml
ams_uav/: CMakeLists.txt  package.xml
ams_uav/action/: FlyToTarget.action
ams_uav/cfg/: control.cfg
ams_uav/config/: 3dr_x4_apm.yaml  scorpion_+4_apm.yaml
ams_uav/include/ams_uav/: ams_uav.h  fly_to_target_action_server.h  quad_controller.h  quad_manager.h  quad_teleop.h
ams_uav/launch/: ams_quad_startup.launch  apm2.launch  apm2_config.yaml  node.launch
ams_uav/src/: action_test.cpp  fly_to_target_action_server.cpp  quad_controller.cpp  quad_controller_node.cpp  quad_manager.cpp  quad_manager_node.cpp  quad_teleop.cpp  quad_teleop_node.cpp  trajectory_planner.cpp
ams_uav/srv/: DesiredPoseChange.srv  ModeChange.srv
ams_uav/urdf/: ams.urdf
ams_uav_description/: CMakeLists.txt  package.xml
ams_uav_description/launch/: 3dr_x4_description.launch  description.launch  description_with_arm.launch
ams_uav_description/urdf/: 3dr_x4.urdf.xacro  ams_quad.urdf.xacro  ams_quad_with_al5d.urdf.xacro  ams_quad_with_arm.urdf.xacro  ams_quad_with_pincher.urdf.xacro
cfg/: control.cfg
launch/: apm_quad_bringup.launch  apm_quad_mocap_tune.launch  apm_quad_startup.launch
rviz/: apm_rviz.rviz
src/: apm_hover_control.cpp  apm_manager.cpp  apm_teleop.cpp
urdf/: apm.urdf
viz/: mocap.yaml
