<?xml version="1.0"?>
<package>
  <name>apm</name>
  <version>0.0.2</version>
  <description>A package for controlling APM quadcopter via MAVLINK using the ROScopter driver with a mocap system.</description>

  <maintainer email="tony.baltovski@gmail.com"> Tony Baltovski</maintainer>
  <url type="website">https://github.com/tonybaltovski/ros_apm</url>
  <url type="repository">https://github.com/tonybaltovski/ros_apm</url>
  <url type="bugtracker">https://github.com/tonybaltovski/ros_apm/issues</url>

  <license>BSD</license>

  <author email="tony.baltovski@gmail.com"> Tony Baltovski</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscopter</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend> 
  <run_depend>tf</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscopter</run_depend>

</package>
